// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer should render correctly with function 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    answer={
        Object {
            "text": "Are you sure ?",
          }
    }
    toQuestion={[Function]}
    val="yes"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className={undefined}
>
           
          Are you sure ?
           
</div>,
        <div
          className={undefined}
>
          yes
</div>,
        <button
          className={undefined}
          onClick={[Function]}
          type="button"
>
          Edit
</button>,
      ],
      "className": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            " ",
            "Are you sure ?",
            " ",
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          " ",
          "Are you sure ?",
          " ",
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "yes",
          "className": undefined,
        },
        "ref": null,
        "rendered": "yes",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Edit",
          "className": undefined,
          "onClick": [Function],
          "type": "button",
        },
        "ref": null,
        "rendered": "Edit",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className={undefined}
>
             
            Are you sure ?
             
</div>,
          <div
            className={undefined}
>
            yes
</div>,
          <button
            className={undefined}
            onClick={[Function]}
            type="button"
>
            Edit
</button>,
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "Are you sure ?",
              " ",
            ],
            "className": undefined,
          },
          "ref": null,
          "rendered": Array [
            " ",
            "Are you sure ?",
            " ",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "yes",
            "className": undefined,
          },
          "ref": null,
          "rendered": "yes",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Edit",
            "className": undefined,
            "onClick": [Function],
            "type": "button",
          },
          "ref": null,
          "rendered": "Edit",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Answer should render correctly without function 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    answer={
        Object {
            "text": "Are you sure ?",
          }
    }
    val="yes"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className={undefined}
>
           
          Are you sure ?
           
</div>,
        <div
          className={undefined}
>
          yes
</div>,
        undefined,
      ],
      "className": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            " ",
            "Are you sure ?",
            " ",
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          " ",
          "Are you sure ?",
          " ",
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "yes",
          "className": undefined,
        },
        "ref": null,
        "rendered": "yes",
        "type": "div",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className={undefined}
>
             
            Are you sure ?
             
</div>,
          <div
            className={undefined}
>
            yes
</div>,
          undefined,
        ],
        "className": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              " ",
              "Are you sure ?",
              " ",
            ],
            "className": undefined,
          },
          "ref": null,
          "rendered": Array [
            " ",
            "Are you sure ?",
            " ",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "yes",
            "className": undefined,
          },
          "ref": null,
          "rendered": "yes",
          "type": "div",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
